--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:textSize="50sp"
         android:textStyle="bold"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="80dp"
         android:layout_marginBottom="8dp" />
 
     <TextView
@@ -44,7 +44,7 @@
             android:id="@+id/ivRole"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/people"
+            android:src="@drawable/person_svg"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp" />
     <EditText
@@ -72,7 +72,7 @@
             android:id="@+id/ivPassword"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/password"
+            android:src="@drawable/lock_svg"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp" />
     <EditText
@@ -117,7 +117,7 @@
         android:text="@string/no_account"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="90dp"
         android:layout_gravity="center" />
 
 </LinearLayout>
