--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,22 +11,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="20dp">
 
-        <!-- Encabezado -->
-        <ImageView
-            android:id="@+id/ivSettings"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/lines_3"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:layout_gravity="right"
+            android:paddingEnd="10dp">
+            <ImageView
+                android:id="@+id/ivSettings"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/settings"/>
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:gravity="center_vertical">
 
             <TextView
@@ -35,11 +42,63 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Casa mochiss"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:textColor="#00B2BE"/>
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="33dp"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/bg_switch"
+            android:padding="2.5dp"
+            android:layout_gravity="center">
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switchOnOff"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:checked="true"
+                android:textColor="@color/white"
+                android:thumb="@drawable/thumb_selector"
+                app:switchMinWidth="140dp"
+                app:track="@drawable/track_selector" />
+
+            <LinearLayout
+                android:layout_width="140dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/tvSwitchHoy"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Hoy"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tvSwitchSemanal"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Semanal"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+        </RelativeLayout>
+
+
 
         <ListView
             android:id="@+id/lv_dias"
@@ -57,6 +116,7 @@
         android:layout_height="60dp"
         android:src="@drawable/add_task"
         android:contentDescription="Agregar tarea"
-        android:layout_margin="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="50dp"
         android:layout_gravity="bottom|end"/>
 </FrameLayout>
