--- a/app/src/main/res/layout/activity_add_edit.xml
+++ b/app/src/main/res/layout/activity_add_edit.xml
@@ -25,7 +25,7 @@
 
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/back_arrow_g"
+                android:src="@drawable/back_arrow_svg"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp" />
 
@@ -46,7 +46,7 @@
                 android:hint=" Nombre de la tarea"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:drawableStart="@drawable/rename"
+                android:drawableStart="@drawable/barbar"
                 android:paddingStart="16dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/background_blue_sky"
