--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,15 +17,23 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
-            android:layout_margin="0dp"
-            android:layout_gravity="right"
-            android:paddingEnd="10dp">
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/btnBack"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/back_arrow_svg"
+                android:layout_marginRight="270dp"
+                />
+
             <ImageView
                 android:id="@+id/ivSettings"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginRight="50dp"
                 android:src="@drawable/settings"/>
+
         </LinearLayout>
 
 
