--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -85,7 +85,7 @@
         android:paddingStart="16dp"
         android:background="@drawable/background_blue_sky"
         app:cornerRadius="20dp"
-        android:inputType="textPassword" />
+        android:inputType="textEmailAddress" />
     </LinearLayout>
 
     <LinearLayout
