--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -11,7 +11,7 @@
         android:id="@+id/ivHomeIcon"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@drawable/house"
+        android:src="@drawable/house_svg"
         android:tint="@color/white"
         android:layout_gravity="center"
         android:layout_marginEnd="16dp"/>
