--- a/app/src/main/res/drawable/thumb_selector.xml
+++ b/app/src/main/res/drawable/thumb_selector.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:state_checked="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#66AFCC" />
+            <corners android:radius="10dp" />
+            <size android:width="80dp" android:height="28dp" />
+        </shape>
+    </item>
     <item android:state_checked="false">
-        <shape
-            android:dither="true" android:shape="rectangle"
-            android:useLevel="false" android:visible="true">
-            <solid android:color="@color/white" />
-            <corners android:radius="6dp" />
-            <size
-                android:width="70dp"
-                android:height="30dp" />
+        <shape android:shape="rectangle">
+            <solid android:color="#66AFCC" />
+            <corners android:radius="10dp" />
+            <size android:width="80dp" android:height="28dp" />
         </shape>
     </item>
 </selector>
