--- a/app/src/main/res/drawable/track_selector.xml
+++ b/app/src/main/res/drawable/track_selector.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
-        <shape android:dither="true" android:shape="rectangle"
-            android:useLevel="false" android:visible="true">
-            <solid android:color="@color/white" />
-            <corners android:radius="6dp" />
-            <size android:width="100dp"
-                android:height="30dp" />
+        <shape android:shape="rectangle">
+            <solid android:color="@color/gray_light" />
+            <corners android:radius="10dp" />
+            <size android:width="160dp" android:height="30dp" />
         </shape>
     </item>
     <item android:state_checked="false">
-        <shape android:dither="true" android:shape="rectangle"
-            android:useLevel="false" android:visible="true" >
-            <corners android:radius="6dp" />
-            <size
-                android:width="100dp"
-                android:height="30dp" />
-            <solid android:color="@color/white" />
+        <shape android:shape="rectangle">
+            <solid android:color="@color/gray_light" />
+            <corners android:radius="10dp" />
+            <size android:width="160dp" android:height="30dp" />
         </shape>
     </item>
 </selector>
