--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!-- Contenedor principal -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -58,50 +57,49 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="33dp"
+            android:layout_height="48dp"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/bg_switch"
             android:padding="2.5dp"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            >
 
-            <androidx.appcompat.widget.SwitchCompat
+            <Switch
                 android:id="@+id/switchOnOff"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_width="160dp"
+                android:layout_height="48dp"
                 android:layout_centerVertical="true"
-                android:checked="true"
-                android:textColor="@color/white"
                 android:thumb="@drawable/thumb_selector"
-                app:switchMinWidth="140dp"
-                app:track="@drawable/track_selector" />
+                android:track="@drawable/track_selector"
+                app:switchMinWidth="160dp"
+                app:switchPadding="0dp"/>
 
             <LinearLayout
-                android:layout_width="140dp"
+                android:layout_width="160dp"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="2">
 
                 <TextView
-                    android:id="@+id/tvSwitchHoy"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="Hoy"
-                    android:textColor="@color/black"
-                    android:textSize="12sp" />
-
-                <TextView
                     android:id="@+id/tvSwitchSemanal"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Semanal"
-                    android:textColor="@color/black"
-                    android:textSize="12sp" />
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvSwitchHoy"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Hoy"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
         </RelativeLayout>
