--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_title"
-        android:textSize="50sp"
+        android:textSize="45sp"
         android:textStyle="bold"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
@@ -24,7 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_description"
-        android:textSize="24sp"
+        android:textSize="25sp"
+        android:layout_marginTop="5dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_marginLeft="20dp"
@@ -101,6 +102,17 @@
         app:cornerRadius="20dp" />
 
     <TextView
+        android:id="@+id/tvError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textColor="@color/red"
+        android:text="Contraseña o correo incorrectos"
+        android:textStyle="bold"/>
+
+
+
+    <TextView
         android:id="@+id/tvOlvidasteContrasena"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -108,16 +120,18 @@
         android:textSize="20sp"
         android:textColor="@color/blue_brilliant"
         android:layout_gravity="center"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginTop="5dp"
+        />
 
     <TextView
         android:id="@+id/tvNoTienesCuenta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_account"
-        android:textSize="20sp"
+        android:textSize="23sp"
         android:textStyle="bold"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="center" />
 
 </LinearLayout>
