--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_title"
-        android:textSize="50sp"
+        android:textSize="45sp"
         android:textStyle="bold"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
@@ -24,9 +24,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_description"
-        android:textSize="24sp"
+        android:textSize="25sp"
         android:layout_gravity="center"
         android:gravity="center"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="10dp" />
@@ -162,7 +163,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/already_have_account"
-        android:textSize="20sp"
+        android:textSize="23sp"
         android:textStyle="bold"
         android:layout_gravity="center" />
 
