--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -37,21 +37,22 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/background_blue_sky"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/ivRole"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/person_svg"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp" />
     <EditText
         android:id="@+id/etNombre"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="56dp"
         android:hint="@string/name"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -65,21 +66,21 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/background_blue_sky"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/ivEmail"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/email_svg"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp" />
     <EditText
         android:id="@+id/etCorreo"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="56dp"
         android:textSize="20sp"
         android:hint="@string/email"
         android:textStyle="bold"
@@ -94,21 +95,21 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/background_blue_sky"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/ivPassword"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/lock_svg"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp" />
     <EditText
         android:id="@+id/etContrasena"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="56dp"
         android:hint="@string/password"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -123,21 +124,21 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/background_blue_sky"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/ivConfirmPassword"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/lock_svg"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp" />
     <EditText
         android:id="@+id/etConfirmarContrasena"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="56dp"
         android:textSize="20sp"
         android:hint="@string/confirm_password"
         android:textStyle="bold"
@@ -156,7 +157,17 @@
         android:layout_marginRight="30dp"
         android:backgroundTint="@color/blue_brilliant"
         app:cornerRadius="20dp"
+        android:layout_marginTop="5dp"
         android:text="@string/register" />
+
+    <TextView
+        android:id="@+id/tvError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textColor="@color/red"
+        android:text="Contraseña o correo incorrectos"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tvYaTienesCuenta"
@@ -165,6 +176,7 @@
         android:text="@string/already_have_account"
         android:textSize="23sp"
         android:textStyle="bold"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center" />
 
 </LinearLayout>
