Configuración de vista casas
Ahora, cuando no haya casas se ocultan los botones pequeños en la actividad createJoinHome y la lista de casas, en su lugar se muestran dos botones grandes en la parte superior para añadir o unirse a una casa

--- a/app/src/main/res/layout/activity_create_join_home.xml
+++ b/app/src/main/res/layout/activity_create_join_home.xml
@@ -23,6 +23,7 @@
 
     <!-- Para los botones en caso que no haya casa -->
     <LinearLayout
+        android:id="@+id/botones_grandes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
