--- a/app/src/main/res/layout/activity_create_join_home.xml
+++ b/app/src/main/res/layout/activity_create_join_home.xml
@@ -24,15 +24,12 @@
     <!-- Para los botones en caso que no haya casa -->
     <LinearLayout
         android:id="@+id/botones_grandes"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"
         android:visibility="gone">
-
 
         <!-- Botón Crear Hogar -->
         <LinearLayout
