--- a/app/src/main/res/layout/activity_create_home.xml
+++ b/app/src/main/res/layout/activity_create_home.xml
@@ -29,6 +29,7 @@
         android:layout_marginBottom="80dp" />
 
     <EditText
+        android:maxLength="20"
         android:id="@+id/etNombreHogar"
         android:layout_width="match_parent"
         android:layout_height="70dp"
