--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,10 +108,10 @@
 
 
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/lv_dias"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:divider="@android:color/transparent"
             android:dividerHeight="10dp"/>
