--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingVertical="20dp"
         android:orientation="vertical">
 
@@ -40,7 +40,7 @@
                 android:progress="1" />
         </LinearLayout>
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/lv_tareas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
