--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -72,6 +72,7 @@
             android:layout_weight="0">
 
             <ImageButton
+                android:id="@+id/btnCompletarTarea"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@drawable/task_button"
