--- a/app/src/main/res/layout/item_task_detail.xml
+++ b/app/src/main/res/layout/item_task_detail.xml
@@ -20,7 +20,7 @@
             android:background="@drawable/circle_color_member" />
 
         <TextView
-            android:id="@+id/tv_miembro"
+            android:id="@+id/tvMiembroDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Chuy"
@@ -206,6 +206,7 @@
     </LinearLayout>
 
     <ImageButton
+        android:id="@+id/btnCompletarTareaDetail"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@drawable/task_button"
