--- a/app/src/main/res/layout/activity_create_join_home.xml
+++ b/app/src/main/res/layout/activity_create_join_home.xml
@@ -77,7 +77,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nueva casa"
+                android:text="Unirse a hogar"
                 android:textSize="17sp"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
