--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -30,14 +30,28 @@
                 android:textSize="25sp"
                 android:layout_marginRight="20dp" />
 
-            <ProgressBar
-                android:id="@+id/progressBar"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:progressDrawable="@drawable/progress_bar"
-                android:max="2"
-                android:progress="1" />
+                android:layout_height="wrap_content">
+
+                <ProgressBar
+                    android:id="@+id/pbTareasCompletadas"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:progressDrawable="@drawable/progress_bar"
+                    android:max="10"
+                    android:progress="2" />
+
+                <TextView
+                    android:id="@+id/tvProgresoTexto"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:gravity="center"
+                    android:text="2/10"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold" />
+            </FrameLayout>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
