Caso de uso eliminar, ajustes y visibilidad
Eliminar hogar, eliminar miembro y tareas incluidas, roles de ejemplo, mejora de visibilidad, lista de tareas se adapta al tamaño, el día se muestra correctamente, información entre actividades enviada correctamente, actualizar edición de hogar

--- a/app/src/main/res/layout/activity_add_edit.xml
+++ b/app/src/main/res/layout/activity_add_edit.xml
@@ -129,7 +129,7 @@
             android:id="@+id/tvEliminar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Eliminar"
+            android:text="Eliminar tarea"
             android:textSize="20sp"
             android:textColor="@color/red"
             android:layout_gravity="center"
