--- a/app/src/main/res/layout/activity_create_join_home.xml
+++ b/app/src/main/res/layout/activity_create_join_home.xml
@@ -164,6 +164,9 @@
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:gravity="center"
                 android:text="Unirse a hogar"
                 android:textSize="11sp"
                 android:textColor="@android:color/white"
