--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -71,10 +71,19 @@
     </LinearLayout>
 
     <!-- TODO: Definir si sera esta manera -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:paddingBottom="100dp"
+        android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_marginBottom="20dp">
         <TextView
@@ -136,9 +145,9 @@
             android:layout_height="match_parent"
             android:textSize="20sp"
             android:layout_marginTop="20dp"
-            android:textAlignment="textStart"
+            android:textAlignment="center"
             android:layout_marginLeft="20dp"
-            android:text="@string/members_role"
+            android:text="@string/members"
             android:textStyle="bold"
             android:background="@drawable/background_blue_sky" />
         </LinearLayout>
@@ -188,4 +197,6 @@
         android:textStyle="bold"
         android:layout_gravity="center" />
 
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
