--- a/app/src/main/res/layout/item_task_detail.xml
+++ b/app/src/main/res/layout/item_task_detail.xml
@@ -7,211 +7,220 @@
     android:padding="8dp">
 
     <LinearLayout
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="10dp"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/iv_color"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:background="@drawable/circle_color_member" />
-
-        <TextView
-            android:id="@+id/tvMiembroDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chuy"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <!-- Día Lunes -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:textAlignment="center">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="L"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <CheckBox
-                android:id="@+id/cbLunes"
+            <ImageView
+                android:id="@+id/iv_color"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:buttonTint="@color/black"
-                android:enabled="false" />
+                android:background="@drawable/circle_color_member" />
+
+            <TextView
+                android:id="@+id/tvMiembroDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Chuy"
+                android:textSize="32sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
-        <!-- Día Martes -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
+            <!-- Día Lunes -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ma"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/cbMartes"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:buttonTint="@color/black"
-                android:enabled="false" />
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="L"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
 
-        <!-- Día Miércoles -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:gravity="center"
-            android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cbLunes"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:buttonTint="@color/black"
+                    android:enabled="false" />
+            </LinearLayout>
 
-            <TextView
+            <!-- Día Martes -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mi"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/cbMiercoles"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:buttonTint="@color/black"
-                android:enabled="false" />
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ma"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
 
-        <!-- Día Jueves -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:gravity="center"
-            android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cbMartes"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:buttonTint="@color/black"
+                    android:enabled="false" />
+            </LinearLayout>
 
-            <TextView
+            <!-- Día Miércoles -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="J"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/cbJueves"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:buttonTint="@color/black"
-                android:enabled="false" />
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Mi"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
 
-        <!-- Día Viernes -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:gravity="center"
-            android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cbMiercoles"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:buttonTint="@color/black"
+                    android:enabled="false" />
+            </LinearLayout>
 
-            <TextView
+            <!-- Día Jueves -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="V"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/cbViernes"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:buttonTint="@color/black"
-                android:enabled="false" />
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="J"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
 
-        <!-- Día Sábado -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:gravity="center"
-            android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cbJueves"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:buttonTint="@color/black"
+                    android:enabled="false" />
+            </LinearLayout>
 
-            <TextView
+            <!-- Día Viernes -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="S"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/cbSabado"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:buttonTint="@color/black"
-                android:enabled="false" />
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="V"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
 
-        <!-- Día Domingo -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:gravity="center"
-            android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cbViernes"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:buttonTint="@color/black"
+                    android:enabled="false" />
+            </LinearLayout>
 
-            <TextView
+            <!-- Día Sábado -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="D"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/cbDomingo"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:buttonTint="@color/black"
-                android:enabled="false" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
+
+                <CheckBox
+                    android:id="@+id/cbSabado"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:buttonTint="@color/black"
+                    android:enabled="false" />
+            </LinearLayout>
+
+            <!-- Día Domingo -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="D"
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
+
+                <CheckBox
+                    android:id="@+id/cbDomingo"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:buttonTint="@color/black"
+                    android:enabled="false" />
+            </LinearLayout>
+
         </LinearLayout>
 
+        <ImageButton
+            android:id="@+id/btnCompletarTareaDetail"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/task_button"
+            android:gravity="center"
+            android:padding="0dp" />
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/btnCompletarTareaDetail"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/task_button"
-        android:gravity="center"
-        android:padding="0dp" />
-
 
 </LinearLayout>
