--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -5,9 +5,7 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="8dp"
-    android:id="@+id/ll_container"
-
-    >
+    android:id="@+id/ll_container">
 
     <LinearLayout
         android:layout_width="80dp"
