--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -51,7 +51,18 @@
             android:layout_width="match_parent"
             android:layout_height="300dp" />
 
+        <TextView
+            android:layout_marginTop="20dp"
+            android:id="@+id/tv_hora"
+            android:layout_width="100dp"
+            android:text="12:00"
+            android:textSize="32sp"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:layout_height="50dp"/>
+
     </LinearLayout>
+
 
     <ImageView
         android:id="@+id/editTask"
