--- a/app/src/main/res/layout/item_task_detail.xml
+++ b/app/src/main/res/layout/item_task_detail.xml
@@ -212,12 +212,22 @@
 
         </LinearLayout>
 
+        <TextView
+            android:layout_marginTop="20dp"
+            android:id="@+id/tv_hora"
+            android:layout_width="100dp"
+            android:text="12:00"
+            android:textSize="32sp"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:layout_height="50dp"/>
+
         <ImageButton
             android:id="@+id/btnCompletarTareaDetail"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/task_button"
             android:gravity="center"
             android:padding="0dp" />
