--- a/app/src/main/res/layout/activity_add_edit.xml
+++ b/app/src/main/res/layout/activity_add_edit.xml
@@ -44,10 +44,11 @@
                 android:id="@+id/etNombreTarea"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
-                android:hint=" Nombre de la tarea"
+                android:hint="Nombre de la tarea"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:drawableStart="@drawable/barbar"
+                android:drawablePadding="10dp"
                 android:paddingStart="16dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/background_blue_sky"
@@ -59,9 +60,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:textSize="20sp"
-                android:hint="  Descripción breve"
+                android:hint=" Descripción breve"
                 android:textStyle="bold"
                 android:drawableStart="@drawable/desc"
+                android:drawablePadding="10sp"
                 android:paddingStart="16dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/background_blue_sky"
